--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^9.13.0",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
+    "react-contenteditable": "^3.3.6",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.4.2",
