--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.13.0",
     "gh-pages": "^4.0.0",
+    "prettier": "2.8.1",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.6",
     "react-dom": "^18.2.0",
+    "react-outside-click-handler": "^1.3.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.4.2",
     "react-router-dom": "^6.4.2",
