--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gh-pages": "^4.0.0",
     "prettier": "2.8.1",
     "react": "^18.2.0",
+    "react-calendar": "^4.0.0",
     "react-contenteditable": "^3.3.6",
     "react-dom": "^18.2.0",
     "react-outside-click-handler": "^1.3.0",
