--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "dotenv": "^16.0.3",
     "firebase": "^9.13.0",
+    "formik": "^2.2.9",
     "gh-pages": "^4.0.0",
     "prettier": "2.8.1",
     "react": "^18.2.0",
