--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.0.3",
     "firebase": "^9.13.0",
     "formik": "^2.2.9",
+    "framer-motion": "^9.0.4",
     "gh-pages": "^4.0.0",
     "prettier": "2.8.1",
     "react": "^18.2.0",
