--- a/package.json
+++ b/package.json
@@ -1,59 +1,60 @@
 {
-  "name": "tododaily",
-  "version": "0.1.0",
-  "homepage": "https://kacwojdev.github.io/ToDoDaily/",
-  "private": true,
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-regular-svg-icons": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "dotenv": "^16.0.3",
-    "firebase": "^9.13.0",
-    "formik": "^2.2.9",
-    "framer-motion": "^9.0.4",
-    "gh-pages": "^4.0.0",
-    "prettier": "2.8.1",
-    "react": "^18.2.0",
-    "react-calendar": "^4.0.0",
-    "react-contenteditable": "^3.3.6",
-    "react-dom": "^18.2.0",
-    "react-outside-click-handler": "^1.3.0",
-    "react-redux": "^8.0.5",
-    "react-router": "^6.4.2",
-    "react-router-dom": "^6.4.2",
-    "react-scripts": "^5.0.1",
-    "redux": "^4.2.0",
-    "styled-components": "^5.3.6",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "tododaily",
+    "version": "0.1.0",
+    "homepage": "https://kacwojdev.github.io/",
+    "private": true,
+    "dependencies": {
+        "@fortawesome/fontawesome-svg-core": "^6.2.1",
+        "@fortawesome/free-regular-svg-icons": "^6.2.1",
+        "@fortawesome/free-solid-svg-icons": "^6.2.1",
+        "@fortawesome/react-fontawesome": "^0.2.0",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "dotenv": "^16.0.3",
+        "firebase": "^9.13.0",
+        "formik": "^2.2.9",
+        "framer-motion": "^9.0.4",
+        "gh-pages": "^4.0.0",
+        "prettier": "2.8.1",
+        "react": "^18.2.0",
+        "react-calendar": "^4.0.0",
+        "react-contenteditable": "^3.3.6",
+        "react-dom": "^18.2.0",
+        "react-outside-click-handler": "^1.3.0",
+        "react-redux": "^8.0.5",
+        "react-router": "^6.4.2",
+        "react-router-dom": "^6.4.2",
+        "react-scripts": "^5.0.1",
+        "redux": "^4.2.0",
+        "styled-components": "^5.3.6",
+        "web-vitals": "^2.1.4",
+        "yup": "^1.0.0"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
