--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@fortawesome/free-regular-svg-icons": "^6.2.1",
         "@fortawesome/free-solid-svg-icons": "^6.2.1",
         "@fortawesome/react-fontawesome": "^0.2.0",
+        "@popmotion/popcorn": "^0.4.4",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,9 @@
         "formik": "^2.2.9",
         "framer-motion": "^9.0.4",
         "gh-pages": "^4.0.0",
+        "lodash": "^4.17.21",
+        "nanoid": "^4.0.1",
+        "popmotion": "^11.0.5",
         "prettier": "2.8.1",
         "react": "^18.2.0",
         "react-calendar": "^4.0.0",
@@ -27,7 +31,9 @@
         "react-router-dom": "^6.4.2",
         "react-scripts": "^5.0.1",
         "redux": "^4.2.0",
+        "shortid": "^2.2.16",
         "styled-components": "^5.3.6",
+        "uuid": "^9.0.0",
         "web-vitals": "^2.1.4",
         "yup": "^1.0.0"
     },
