feat: implement vite

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ REACT_APP_FIREBASE_PROJECT_ID = "tododaily-f11d3"
 REACT_APP_FIREBASE_STORAGE_BUCKET = "tododaily-f11d3.appspot.com"
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID = "522835857796"
 REACT_APP_FIREBASE_APP_ID = "1:522835857796:web:7e01fd71660793cb884dd1"
-REACT_APP_FIREBASE_MEASUREMENT_ID="G-YJT6VS8QG6"
+REACT_APP_FIREBASE_MEASUREMENT_ID = "G-YJT6VS8QG6"
