--- a/package.json
+++ b/package.json
@@ -39,11 +39,12 @@
         "yup": "^1.0.0"
     },
     "scripts": {
-        "start": "vite",
-        "build": "vite build",
-        "serve": "vite serve",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"
+        "deploy": "gh-pages -d build"`
     },
     "eslintConfig": {
         "extends": [
@@ -62,11 +63,5 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    },
-    "devDependencies": {
-        "@rollup/plugin-replace": "^5.0.2",
-        "@vitejs/plugin-react": "^4.0.4",
-        "vite": "^4.4.7",
-        "vite-plugin-env-compatible": "^1.1.1"
     }
 }
