--- a/package.json
+++ b/package.json
@@ -44,7 +44,12 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -d build"`
+        "deploy": "gh-pages -d build",
+        "format": "prettier --write \"src/**/*.{ts,tsx,js}\"",
+        "format:check": "prettier --check \"src/**/*.{ts,tsx,js}\"",
+        "lint": "eslint \"src/**/*.{ts,js,mjs}\" --fix",
+        "lint:check": "eslint \"src/**/*.{ts,js,mjs}\"",
+        "prepare": "husky install"
     },
     "eslintConfig": {
         "extends": [
@@ -63,5 +68,9 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "husky": "^8.0.3",
+        "lint-staged": "^13.2.3"
     }
 }
