--- a/package.json
+++ b/package.json
@@ -39,10 +39,9 @@
         "yup": "^1.0.0"
     },
     "scripts": {
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
+        "start": "vite",
+        "build": "vite build",
+        "serve": "vite preview",
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build",
         "format": "prettier --write \"src/**/*.{ts,tsx,js}\"",
