--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
         "react-redux": "^8.0.5",
         "react-router": "^6.4.2",
         "react-router-dom": "^6.4.2",
-        "react-scripts": "^5.0.1",
         "redux": "^4.2.0",
         "shortid": "^2.2.16",
         "styled-components": "^5.3.6",
@@ -69,7 +68,11 @@
         ]
     },
     "devDependencies": {
+        "@rollup/plugin-replace": "^5.0.2",
+        "@vitejs/plugin-react": "^4.0.4",
         "husky": "^8.0.3",
-        "lint-staged": "^13.2.3"
+        "lint-staged": "^13.2.3",
+        "vite": "^4.4.7",
+        "vite-plugin-env-compatible": "^1.1.1"
     }
 }
