--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
         "lodash": "^4.17.21",
         "nanoid": "^4.0.1",
         "popmotion": "^11.0.5",
-        "prettier": "2.8.1",
         "react": "^18.2.0",
         "react-calendar": "^4.0.0",
         "react-contenteditable": "^3.3.6",
@@ -70,8 +69,11 @@
     "devDependencies": {
         "@rollup/plugin-replace": "^5.0.2",
         "@vitejs/plugin-react": "^4.0.4",
-        "husky": "^8.0.3",
+        "eslint": "^8.46.0",
+        "eslint-plugin-react": "^7.33.1",
+        "husky": "^8.0.0",
         "lint-staged": "^13.2.3",
+        "prettier": "2.8.1",
         "vite": "^4.4.7",
         "vite-plugin-env-compatible": "^1.1.1"
     }
