--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
         "serve": "vite preview",
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build",
-        "format": "prettier --write \"src/**/*.{ts,tsx,js}\"",
-        "format:check": "prettier --check \"src/**/*.{ts,tsx,js}\"",
-        "lint": "eslint \"src/**/*.{ts,js,mjs}\" --fix",
-        "lint:check": "eslint \"src/**/*.{ts,js,mjs}\"",
+        "format": "prettier --write \"./src/**/*.{ts,jsx,js}\"",
+        "format:check": "prettier --check \"src/**/*.{ts,jsx,js}\"",
+        "lint": "eslint \"./src/**/*.{js,jsx}\" --fix",
+        "lint:check": "eslint \"./src/**/*.{js,jsx}\"",
         "prepare": "husky install"
     },
     "eslintConfig": {
@@ -70,6 +70,8 @@
         "@rollup/plugin-replace": "^5.0.2",
         "@vitejs/plugin-react": "^4.0.4",
         "eslint": "^8.46.0",
+        "eslint-plugin-import": "^2.28.0",
+        "eslint-plugin-import-newlines": "^1.3.4",
         "eslint-plugin-react": "^7.33.1",
         "husky": "^8.0.0",
         "lint-staged": "^13.2.3",
