--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
         "dotenv": "^16.0.3",
         "firebase": "^9.13.0",
         "formik": "^2.2.9",
-        "framer-motion": "^9.0.4",
         "gh-pages": "^4.0.0",
         "lodash": "^4.17.21",
         "nanoid": "^4.0.1",
@@ -67,12 +66,16 @@
         ]
     },
     "devDependencies": {
+        "@chakra-ui/react": "^2.8.0",
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
         "@rollup/plugin-replace": "^5.0.2",
         "@vitejs/plugin-react": "^4.0.4",
         "eslint": "^8.46.0",
         "eslint-plugin-import": "^2.28.0",
         "eslint-plugin-import-newlines": "^1.3.4",
         "eslint-plugin-react": "^7.33.1",
+        "framer-motion": "^10.15.1",
         "husky": "^8.0.0",
         "lint-staged": "^13.2.3",
         "prettier": "2.8.1",
